@@ -1324,6 +1324,7 @@ Localization
     // WM Config
         #LOC_BDArmory_GuardMode = Guard Mode:\u0020
         #LOC_BDArmory_Team = Team
+        #LOC_BDArmory_Allies = Allies
         #LOC_BDArmory_Weapon = Weapon
         #LOC_BDArmory_FiringPriority = Selection Priority
         #LOC_BDArmory_FiringInterval = Firing Interval
